# set

./: .gitignore  CMakeLists.txt  board.cpp  board.h  cli.cpp  cli.h  game.cpp  game.h  main.cpp  rules.cpp  rules.h
include/core/: board.h  game.h  rules.h
include/ui/: sdl_renderer.h
lean/: lake-manifest.json
lean/Proofs/: NumSets.lean
src/: main.cpp
src/core/: board.cpp  game.cpp  rules.cpp
src/ui/: sdl_renderer.cpp
